# activitypub

./: activitypub.cabal
configurations/: ghc-8.10.project  ghc-9.2.project
